--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/portfolio_pic2.jpg" width="600" height="600" class="img-fluid">
     <div class="caption">
-      <a href="poster.html" class="captiondetails">
+      <a href="visual.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text">   
             <h5>VISUAL</h5>
@@ -138,7 +138,7 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/portfolio_pic5.jpg" width="600" height="600" class="img-fluid">
     <div class="caption">
-      <a href="vedio.html" class="captiondetails">
+      <a href="video.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text">
             <h5>VIDEO</h5>
