--- a/visual.html
+++ b/visual.html
@@ -63,7 +63,7 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_iRoo.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="visual_iRoo.html" class="captiondetails">
+      <a href="visual_iroo.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>iRoo</h5>
@@ -99,7 +99,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/visual_amcbook.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_amcbook.html" class="captiondetails">
@@ -111,11 +111,11 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_AMCt-shirt.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="visual_amct-shirt.html" class="captiondetails">
+      <a href="visual_amctshirt.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>兒童美語T-shirt</h5>
