--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div id="KV">
   <img src="img/KV.png" width="700" height="300" class="img-kv">
   <!--<h1>WELCOME TO MY WORKSHOP</h1>-->
-  <p>Delphine Lan is a Taiwan UI designer.</p><!--based multidisciplinary-->
+  <p>Delphine Lan is a Taiwan based multidisciplinary designer specialising in UI/UX Design, Graphic Design, and Digital Design.</p><!--based multidisciplinary-->
   <ul>
     <!--<li><a href="#" target="_blank"><img src="img/social_icon_fb.png" width="100" height="100"></a></li>
     <li><a href="#" target="_blank"><img src="img/social_icon_ig.png" width="100" height="100"></a></li>-->
