--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <li><a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
   </ul>
   <ul>
-    <li><a href="UI.html" class="btn_box">UI/UX</a></li>
-    <li><a href="visual.html" class="btn_box">VISUAL</a></li>
-    <li><a href="video.html" class="btn_box">VIDEO</a></li>
+    <li class="btn_box"><a href="UI.html">UI/UX</a></li>
+    <li class="btn_box"><a href="visual.html">VISUAL</a></li>
+    <li class="btn_box"><a href="video.html">VIDEO</a></li>
   </ul>
-  <a href="#portfolio">
+  <a href="#skill">
   <button type="button" class="btn">tel me more</button></a>
   <div class="arrow arrow-1"></div>
   <div class="arrow arrow-2"></div>
