--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -65,7 +65,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/course3.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/course4.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/course5.jpg" alt="">
-    <p>The End.</p>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
 </div>
 
 <!--page-->
