--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -71,7 +71,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web2.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web3.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/AMC_web4.jpg" alt="">
-    <p>The End.</p>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
 </div>
 
 <!--page-->
