--- a/UI_appdarkmode.html
+++ b/UI_appdarkmode.html
@@ -62,7 +62,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/ui_darkmode_pic.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic2.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/darkmode_pic3.jpg" alt="">
-    <p>The End.</p>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
 </div>
 
 <!--page-->
