--- a/visual_amcdm.html
+++ b/visual_amcdm.html
@@ -66,7 +66,18 @@
     <hr>
     <p class="title_scribe w-900 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included DM, corporate brochures, and Poster for magazine, and large format print design for advert and events.</p>
     <p class="s_title bottom-25">Poster</p>
-    <img class="img-fluid w-900 bottom-70" src="img/amcdm_pic1.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster1.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster2.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster3.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster4.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster5.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster6.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster7.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster8.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster9.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster10.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster11.jpg" alt="">
+    <img class="img-fluid w-150" src="img/amc_poster12.jpg" alt="">
     <p class="s_title bottom-25">Corporate brochures</p>
     <img class="img-fluid w-900 bottom-70" src="img/amcdm_pic2.png" alt="">
     <p>Copyright © AMC</p>
