--- a/visual_amcdm.html
+++ b/visual_amcdm.html
@@ -77,7 +77,7 @@
     <img class="img-fluid w-150" src="img/amc_poster9.jpg" alt="">
     <img class="img-fluid w-150" src="img/amc_poster10.jpg" alt="">
     <img class="img-fluid w-150" src="img/amc_poster11.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster12.jpg" alt="">
+    <img class="img-fluid w-150 bottom-70" src="img/amc_poster12.jpg" alt="">
     <p class="s_title bottom-25">Corporate brochures</p>
     <img class="img-fluid w-900 bottom-70" src="img/amcdm_pic2.png" alt="">
     <p>Copyright © AMC</p>
