--- a/visual_amcdm.html
+++ b/visual_amcdm.html
@@ -77,8 +77,8 @@
     <img class="img-fluid w-150" src="img/amc_poster9.jpg" alt="">
     <img class="img-fluid w-150" src="img/amc_poster10.jpg" alt="">
     <img class="img-fluid w-150" src="img/amc_poster11.jpg" alt="">
-    <img class="img-fluid w-150 bottom-70" src="img/amc_poster12.jpg" alt="">
-    <p class="s_title bottom-25">Corporate brochures</p>
+    <img class="img-fluid w-150" src="img/amc_poster12.jpg" alt="">
+    <p class="s_title top-95 bottom-25">Corporate brochures</p>
     <img class="img-fluid w-900 bottom-70" src="img/amcdm_pic2.png" alt="">
     <p>Copyright © AMC</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
