--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -60,10 +60,14 @@
     <hr>
     <p class="title_scribe w-900 bottom-25">This is an RWD website for Online English Learning Course.</p>
     <a class="bottom-25" href="https://www.空中家教.com/tutor/Login.aspx" target="blank">link to web →</a>
-    <img class="img-fluid w-900 bottom-70" src="img/course1.jpg" alt="">
+    <p class="s_title_l"><span class="mark-pen">Design categories of different topics to attract students to the courses they want to learn.</span></p>
+    <img class="img-fluid w-900 bottom-25" src="img/course1.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/course2.jpg" alt="">
+    <p class="s_title_l"><span class="mark-pen">Course booking interface.</span></p>
     <img class="img-fluid w-900 bottom-70" src="img/course3.jpg" alt="">
+    <p class="s_title_l"><span class="mark-pen">Discount course interface.</span></p>
     <img class="img-fluid w-900 bottom-70" src="img/course4.jpg" alt="">
+    <p class="s_title_l"><span class="mark-pen">Mobile interface.</span></p>
     <img class="img-fluid w-900 bottom-25" src="img/course5.jpg" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
 </div>
