--- a/video_oldwang.html
+++ b/video_oldwang.html
@@ -62,34 +62,24 @@
   </nav>
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">AMC Poster</h2>
+    <h2 class="title top-25">Old Wang</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included DM, corporate brochures, and Poster for magazine, and large format print design for advert and events.</p>
-    <p class="s_title bottom-25">Poster</p>
-    <img class="img-fluid w-150" src="img/amc_poster1.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster2.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster3.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster4.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster5.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster6.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster7.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster8.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster9.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster10.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster11.jpg" alt="">
-    <img class="img-fluid w-150" src="img/amc_poster12.jpg" alt="">
-    <p class="s_title top-95 bottom-25">Corporate brochures</p>
-    <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic1.jpg" alt="">
-    <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic2.jpg" alt="">
-    <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic3.jpg" alt="">
-    <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic4.jpg" alt="">
-    <p>Copyright © AMC</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <p class="title_scribe w-900 bottom-25">Graduation works<br>
+        We are a three-person team. I am mainly responsible for  3D Modeling and 3D character animation. and some post-production.</p>
+    <a class="bottom-70" href="https://youtu.be/gD2k6O-nMcw" target="blank">link to video →</a>
+    <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic1.png" alt="">
+    <p class="s_title bottom-25">Movie storyboard</p>
+    <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic2.png" alt="">
+    <p class="s_title bottom-25">3D perspective</p>
+    <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic3.png" alt="">
+    <p class="s_title bottom-25">Character 3D Modeling</p>
+    <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic4.png" alt="">
+    <a class="bottom-25 top-25 font-darkgray" href="video.html" target="blank">Back to Video ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="visual_amcedm.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_amctshirt.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="video_itaxi.html"><img src="img/arr_left.png"> Previous</a>
+<!--<a class="line-arrow right font-darkgray" href="video_oldwang.html">Next <img src="img/arr_right.png"></a>-->
 
 
 <!-- Bootstrap -->
