--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Delphine Lan's portfolio, Delphine Lan is a Taiwan based multidisciplinary designer specialising in UI Design, UX Design, Graphic Design, and Digital Design." class="next-head"/>
+<meta name="keywords" content="UI Design, UX Design, Graphic Design, Digital Design" class="next-head"/>
 <meta property="og:title" content="Portfolio: Delphine-lan">
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Delphine-Lan">
