--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -73,8 +73,8 @@
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_amcwebsite.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_appdarkmode.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="UI_appdarkmode.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="UI_amcwebsite.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
@@ -92,6 +92,30 @@
           }, false);
       });
   }
+</script>
+<script>
+  $(document).ready(function () {
+  
+  'use strict';
+  
+   var c, currentScrollTop = 0,
+       navbar = $('nav');
+
+   $(window).scroll(function () {
+      var a = $(window).scrollTop();
+      var b = navbar.height();
+     
+      currentScrollTop = a;
+     
+      if (c < currentScrollTop && a > b + b) {
+        navbar.addClass("scrollUp");
+      } else if (c > currentScrollTop && !(a <= b)) {
+        navbar.removeClass("scrollUp");
+      }
+      c = currentScrollTop;
+  });
+  
+});
 </script>
 <script src="js/script.js"></script>
 </body>
