--- a/UI.html
+++ b/UI.html
@@ -102,7 +102,7 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_news.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_newspage.html" class="captiondetails">
+      <a href="UI_news.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>新聞內頁</h5>
