--- a/UI_fundschip.html
+++ b/UI_fundschip.html
@@ -62,24 +62,25 @@
   </nav>
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">News Channel of Website</h2>
+    <h2 class="title top-25">Funds Chip</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">The news channel website is redesigned and conforms to RWD, the optimized interface is convenient for users to read on mobile phones.</p>
-    <p class="s_title bottom-25">News Page</p>
-    <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic1.gif" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic2.jpg" alt="">
-    <p class="s_title bottom-25">Toptopic News Page</p>
-    <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic3.gif" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic4.jpg" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic5.jpg" alt="">
+    <p class="title_scribe w-900 bottom-25">UI/UX design for App & Mobile Web.<br>
+        A theme page in the Website and App.</p>
+    <img class="img-fluid bottom-70" src="img/fundschip_pic1.gif" alt="">
+    <p class="s_title bottom-25">thermodynamic chart Status</p>
+    <img class="img-fluid w-300 bottom-70" src="img/fundschip_pic2.png" alt="">
+    <img class="img-fluid w-300 bottom-70" src="img/fundschip_pic3.png" alt="">
+    <p class="s_title top-95 bottom-25">thermodynamic line chart</p>
+    <p class="title_scribe w-900 bottom-25">Due to the different operation modes of app and web, the interface design will be slightly different.</p>
+    <img class="img-fluid w-150 bottom-70" src="img/fundschip_pic4.png" alt="">
+    <img class="img-fluid w-150 bottom-25" src="img/fundschip_pic5.png" alt="">
+    <img class="img-fluid w-150 bottom-25" src="img/fundschip_pic6.png" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_socialmedia_cms.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_fundschip.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="UI_news.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="UI_appdarkmode.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
