--- a/UI.html
+++ b/UI.html
@@ -87,6 +87,19 @@
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
+    <img src="img/ui_fundschip.gif" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_fundschip.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Funds Chip</h5>
+            <p class="font-subdark center-text">UI/UX design for App & Mobile Web</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
     <img src="img/ui_darkmode_pic.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_appdarkmode.html" class="captiondetails">
