--- a/visual.html
+++ b/visual.html
@@ -63,7 +63,7 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_invesco.png" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="visual_iroo.html" class="captiondetails">
+      <a href="visual_Invesco.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Invesco</h5>
