--- a/visual.html
+++ b/visual.html
@@ -58,7 +58,7 @@
 <div id="webdesign" class="container">
   <h2 class="title top-25">VISUAL</h2>
   <hr>
-  <p class="title_scribe bottom-70">Delphine designed various visuals including Campaign Page, DM, Poster, Book Cover, Light boxes, BRAND images, etc.</p>
+  <p class="title_scribe w-900 bottom-70">Delphine designed various visuals including Campaign Page, DM, Poster, Book Cover, Light boxes, BRAND images, etc.</p>
   <!--pic-banner-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_invesco.png" width="550" height="500" class="img-fluid">
