--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -65,7 +65,7 @@
     <h2 class="title top-25">Invesco</h2>
     <hr>
     <p class="title_scribe w-900 bottom-25">RWD Campaign Gage<br>
-        The entire event page is based on Van Gogh's The Starry Night.<br>
+        The entire event page is based on Van Gogh's The Starry Night. 
         I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
     <img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">
