--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -69,7 +69,7 @@
         I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
     <img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">
-    <p class="s_title bottom-25">Key Visual</p>
+    <p class="s_title bottom-25">Key Visual Style</p>
     <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic2.png" alt="">
     <p class="s_title bottom-25">color use</p>
     <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic3.png" alt="">
