--- a/UI_appdarkmode.html
+++ b/UI_appdarkmode.html
@@ -62,11 +62,11 @@
     <img class="img-fluid w-900 bottom-70" src="img/ui_darkmode_pic.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic2.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/darkmode_pic3.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_news.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_subscription.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_Coursewebsite.html">Next <img src="img/arr_right.png"></a>
 
 
