--- a/UI_fundschip.html
+++ b/UI_fundschip.html
@@ -72,14 +72,13 @@
     <img class="img-fluid w-300 bottom-70" src="img/fundschip_pic3.png" alt="">
     <p class="s_title top-95 bottom-25">thermodynamic line chart</p>
     <p class="title_scribe w-900 bottom-25">Due to the different operation modes of app and web, the interface design will be slightly different.</p>
-    <img class="img-fluid w-150 bottom-70" src="img/fundschip_pic4.png" alt="">
-    <img class="img-fluid w-150 bottom-25" src="img/fundschip_pic5.png" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html" target="blank">Back to UI/UX ></a>
+    <img class="img-fluid w-600 bottom-70" src="img/fundschip_pic4.jpg" alt="">
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_news.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_appdarkmode.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_subscription.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
