--- a/UI_subscription.html
+++ b/UI_subscription.html
@@ -62,24 +62,24 @@
   </nav>
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">News Channel of Website</h2>
+    <h2 class="title top-25">Subscription of Member</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">The news channel website is redesigned and conforms to RWD, the optimized interface is convenient for users to read on mobile phones.</p>
-    <p class="s_title bottom-25">News Page</p>
-    <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic1.gif" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic2.jpg" alt="">
-    <p class="s_title bottom-25">Toptopic News Page</p>
-    <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic3.gif" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic4.jpg" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic5.jpg" alt="">
+    <p class="title_scribe w-900 bottom-25">UI/UX design for RWD Web.</p>
+    <img class="img-fluid w-100max bottom-70" src="img/Subscription_pic1.png" alt="">
+    <p class="s_title bottom-25">Subscription Service of Member Center</p>
+    <img class="img-fluid w-900 bottom-70" src="img/Subscription_pic2.png" alt="">
+    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic3.png" alt="">
+    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic4.png" alt="">
+    <p class="s_title bottom-25">Subscription of News</p>
+    <img class="img-fluid w-900 bottom-70" src="img/Subscription_pic5.png" alt="">
+    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic6.png" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/ui_web_membernews.jpg" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_socialmedia_cms.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_fundschip.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="UI_fundschip.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="UI_appdarkmode.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
