--- a/video_itaxi.html
+++ b/video_itaxi.html
@@ -72,7 +72,7 @@
     <img class="img-fluid w-900" src="img/itaxi_pic4.jpg" alt="">
     <img class="img-fluid w-900" src="img/itaxi_pic5.jpg" alt="">
     <p>Copyright © 點設計</p>
-    <a class="bottom-25 top-25 font-darkgray" href="video.html" target="blank">Back to Video ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="video.html">Back to Video ></a>
 </div>
 
 <!--page-->
