--- a/video_oldwang.html
+++ b/video_oldwang.html
@@ -74,7 +74,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic3.png" alt="">
     <p class="s_title bottom-25">Character 3D Modeling</p>
     <img class="img-fluid w-900 bottom-70" src="img/oldwang_pic4.png" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="video.html" target="blank">Back to Video ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="video.html">Back to Video ></a>
 </div>
 
 <!--page-->
