--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -65,11 +65,11 @@
     <h2 class="title top-25">Invesco</h2>
     <hr>
     <p class="title_scribe w-900 bottom-25">RWD Campaign Gage<br>
-        The entire event page is based on Van Gogh's The Starry Night. 
+        The entire event page is based on Van Gogh's The Starry Night.<br>
         I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
     <img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">
-    <p class="s_title bottom-25">Key Visual Style</p>
+    <p class="s_title bottom-25">Key Visual</p>
     <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic2.png" alt="">
     <p class="s_title bottom-25">color use</p>
     <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic3.png" alt="">
