--- a/visual_amcdm.html
+++ b/visual_amcdm.html
@@ -84,7 +84,7 @@
     <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic3.jpg" alt="">
     <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic4.jpg" alt="">
     <p>Copyright © AMC</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
