--- a/visual_amcedm.html
+++ b/visual_amcedm.html
@@ -80,7 +80,7 @@
     <img class="img-fluid w-900" src="img/amcedm_pic7.png" alt="">
     <a class="bottom-70" href="https://www.空中家教.com/web/edm/20190315_Invest/AAD_eDM.aspx" target="blank">link to web →</a>
     <p>Copyright © AMC</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
