--- a/visual_amctshirt.html
+++ b/visual_amctshirt.html
@@ -69,7 +69,7 @@
     <img class="img-fluid w-900 bottom-25" src="img/tshirt_pic2.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/tshirt_pic3.png" alt="">
     <p>Copyright © AMC</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
