--- a/visual_dora.html
+++ b/visual_dora.html
@@ -75,7 +75,7 @@
     <img class="img-fluid w-900 bottom-25" src="img/dora_pic3.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/dora_pic4.jpg" alt="">
     <p>Copyright © Dora</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
