--- a/visual_laman.html
+++ b/visual_laman.html
@@ -67,7 +67,7 @@
     <p class="title_scribe w-900 bottom-25">This is a series of ramen posters I designed for 樂麵屋</p>
     <img class="img-fluid w-900 bottom-70" src="img/laman_pic1.png" alt="">
     <p>Copyright © 樂麵屋</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
