--- a/visual_tis.html
+++ b/visual_tis.html
@@ -70,7 +70,7 @@
     <p class="s_title bottom-25">2012 TIS Exhibition-Taipei in Style</p>
     <img class="img-fluid w-900 bottom-70" src="img/TIS_pic2.jpg" alt="">
     <p>Copyright © TIS</p>
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
