--- a/visual_peruga.html
+++ b/visual_peruga.html
@@ -66,7 +66,7 @@
     <hr>
     <p class="title_scribe w-900 bottom-70">This is the signboard I designed for a spaghetti shop located in the food street.</p>
     <img class="img-fluid w-900 bottom-70" src="img/peruga_pic1.png" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="visual.html" target="blank">Back to Visual ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
