--- a/UI.html
+++ b/UI.html
@@ -100,6 +100,19 @@
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
+    <img src="img/ui_web_membernews.jpg" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_subscription.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Subscription of Member</h5>
+            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
     <img src="img/ui_darkmode_pic.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_appdarkmode.html" class="captiondetails">
