--- a/UI.html
+++ b/UI.html
@@ -61,26 +61,52 @@
   <p class="title_scribe bottom-70">Delphine design User Interface and User Experience products for App and Website.</p>
   <!--pic-banner-->
   <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_web_AMC.jpg" width="550" height="500" class="img-fluid">
+    <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_amcwebsite.html" class="captiondetails">
+      <a href="UI_socialmedia_app.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>AMC official website</h5>
-            <p class="font-subdark center-text">RWD web design</p>
+            <h5>Social Media App</h5>
+            <p class="font-subdark center-text">App UI/UX design</p>
           </div>
         </div>
       </a>
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_web_lesson.jpg" width="550" height="500" class="img-fluid">
+    <img src="img/ui_web_socialmedia.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_Coursewebsite.html" class="captiondetails">
+      <a href="UI_socialmedia_web.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>Course Selection Website</h5>
-            <p class="font-subdark center-text">選課系統介面設計</p>
+            <h5>Social Media Web</h5>
+            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
+    <img src="img/ui_cms_socialmedia.jpg" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_socialmedia_cms.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Social Media CMS</h5>
+            <p class="font-subdark center-text">CMS UI/UX design</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
+    <img src="img/ui_web_news.jpg" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_news_Undisclosed.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>News Channel of Web</h5>
+            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
           </div>
         </div>
       </a>
@@ -118,60 +144,34 @@
       <a href="UI_appdarkmode.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>新聞App</h5>
-            <p class="font-subdark center-text">App Darkmode 版本製作</p>
+            <h5>News App</h5>
+            <p class="font-subdark center-text">App Darkmode design</p>
           </div>
         </div>
       </a>
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_web_news.jpg" width="550" height="500" class="img-fluid">
+    <img src="img/ui_web_lesson.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_newspage.html" class="captiondetails">
+      <a href="UI_Coursewebsite.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>News Channel of Website</h5>
-            <p class="font-subdark center-text">RWD web UI design</p>
+            <h5>Course Selection Website</h5>
+            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
           </div>
         </div>
       </a>
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
+    <img src="img/ui_web_AMC.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_app_socialmedia.html" class="captiondetails">
+      <a href="UI_amcwebsite.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>Social Media App</h5>
-            <p class="font-subdark center-text">App UI/UX design</p>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_web_socialmedia.jpg" width="550" height="500" class="img-fluid">
-    <div class="caption">
-      <a href="UI_web_socialmedia.html" class="captiondetails">
-        <div class="caption-warp">
-          <div class="caption-text center-text">
-            <h5>Social Media Web</h5>
-            <p class="font-subdark center-text">RWD web design, UI/UX</p>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div id="pic-banner" class="col-md-4">
-    <img src="img/ui_cms_socialmedia.jpg" width="550" height="500" class="img-fluid">
-    <div class="caption">
-      <a href="UI_cms_socialmedia.html" class="captiondetails">
-        <div class="caption-warp">
-          <div class="caption-text center-text">
-            <h5>Social Media CMS</h5>
-            <p class="font-subdark center-text">CMS UI/UX design</p>
+            <h5>AMC official website</h5>
+            <p class="font-subdark center-text">RWD web design</p>
           </div>
         </div>
       </a>
