--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -62,23 +62,16 @@
   </nav>
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">Funds Chip</h2>
+    <h2 class="title top-25">Social Media App</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">UI/UX design for App & Mobile Web.<br>
-        A theme page in the Website and App.</p>
-    <img class="img-fluid bottom-70" src="img/fundschip_pic1.gif" alt="">
-    <p class="s_title bottom-25">thermodynamic chart Status</p>
-    <img class="img-fluid w-300 bottom-70" src="img/fundschip_pic2.png" alt="">
-    <img class="img-fluid w-300 bottom-70" src="img/fundschip_pic3.png" alt="">
-    <p class="s_title top-95 bottom-25">thermodynamic line chart</p>
-    <p class="title_scribe w-900 bottom-25">Due to the different operation modes of app and web, the interface design will be slightly different.</p>
-    <img class="img-fluid w-600 bottom-70" src="img/fundschip_pic4.jpg" alt="">
+    <p class="title_scribe w-900 bottom-25">UI/UX design for App.</p>
+    <img class="img-fluid w-900 bottom-70" src="img/img_Undisclosed.jpg" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_news_Undisclosed.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_subscription.html">Next <img src="img/arr_right.png"></a>
+<!--<a class="line-arrow left font-darkgray" href="UI_news.html"><img src="img/arr_left.png"> Previous</a>-->
+<a class="line-arrow right font-darkgray" href="UI_socialmedia_web.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
