--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -71,7 +71,7 @@
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_socialmedia_web.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_news.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_news_Undisclosed.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
